--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "homepage": "https://github.com/katawutc/katawut-MEP2#readme",
   "dependencies": {
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.2",
     "ejs": "^2.5.7",
     "express": "^4.15.3",
+    "mongodb": "^2.2.30",
     "mongoose": "^4.11.5"
   }
 }
