--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "mongodb": "^2.2.30"
+    "jsonwebtoken": "^7.4.2",
+    "mongodb": "^2.2.30",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1"
   }
 }
