--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "helmet": "^3.8.1",
     "jsonwebtoken": "^7.4.2",
     "mongodb": "^2.2.30",
     "passport": "^0.3.2",
