--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^3.8.1",
     "jsonwebtoken": "^7.4.2",
     "mongodb": "^2.2.30",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1"
   }
