--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-angular-order": "^1.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.0.4",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
     "jshint": "^2.9.5"
