--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "async": "^2.5.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "compression": "^1.7.1",
     "express": "^4.15.3",
     "helmet": "^3.8.1",
     "jsonwebtoken": "^7.4.2",
